2006-12-26  Ankit Jain  <jankit@novell.com>

	* MSBuildSolution.cs (HandleAddEntry): Fix order of arguments to AskQuestion.

2006-12-26  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (LoadProjectConfigurationMappings): Update to
	changes.
	(FindCombineConfigurationEntry): Replace with ...
	(GetConfigEntryForProject): ... this. Create the entries if not found.
	(GetConfigEntry): New.

2006-12-22  Ankit Jain  <jankit@novell.com>

	* MSBuildSolution.cs:
	* SlnFileFormat.cs:
	* MSBuildFileFormat.cs:
	Use GettextCatalog.GetString for all user visibile strings, except debug
	output.

2006-12-22  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (LoadSolution): Preserve the project's sln lines
	if the project loading fails.

2006-12-21  Ankit Jain  <jankit@novell.com>

	* MSBuildFileFormat.cs (SetForNullCondition): New.
	(CheckNullCondition): New.
	New methods to get default values for config and platform.
	(ReadConfig): Add 'default_platform' param.
	(ParseCondition): Left side of the condition decides the number of
	elements returned.
	(SaveProject): Emit elements for default Configuration and Platform, 
	set to "Debug" and "AnyCPU".

2006-12-19  Ankit Jain  <jankit@novell.com>

	* MSBuildFileFormat.cs (WriteFileInternal): Fix typo in writing default
	Platform.

2006-12-18  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (LoadSolution): Don't overwrite the project name.
	* MSBuildFileFormat.cs (SetupHandlers): Re-enable NameChanged event
	handler.
	(HandleRename): Ignore if the project is not part of a combine.

2006-12-18  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (LoadProjectConfigurationMappings): Config name can
	have a '.' in it, handle that.

2006-12-18  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (WriteProjectConfigurations): Temporary workaround
	to allow importing of projects/solutions into a msbuild solution to work.
	Minor refactoring.
	Line numbers are 1-based.

2006-12-18  Ankit Jain  <jankit@novell.com>
